# UniSLAM

./: CMakeLists.txt  Dockerfile  README.md  check.sh  clean.sh  docker-compose.yml  make.sh  run_ctest.sh  run_unit_tests.sh
.github/workflows/: tests_with_docker_image.yml
include/: ImageProcessor.h  MyClass.h  debug_view.hpp  discrete_angle_edge_intensity.hpp  edge.h  edge_3d.hpp  edge_detector.hpp  edge_point_check.hpp  edge_point_finder.hpp  edge_space_dynamics.hpp  force_calculation.hpp  frame.h  frame_node.hpp  line_3d.hpp  local_slam.hpp  pose_3d.hpp
script/: show_img.py
src/: ImageProcessor.cpp  MyClass.cpp  camera_model.hpp  camera_model_test.cpp  debug_view.cpp  discrete_angle_edge_intensity.cpp  edge.cpp  edge_3d.cpp  edge_detector.cpp  edge_point.cpp  edge_point_check.cpp  edge_point_finder.cpp  edge_space_dynamics.cpp  edges_space.cpp  force_calculation.cpp  frame.cpp  frame_node.cpp  frame_node_data.hpp  line_3d.cpp  local_slam.cpp  local_slam.hpp  local_slam_test.cpp  main.cpp  matching_edge_test.cpp  vslam_debug_view.cpp  vslam_debug_view.hpp
src/config_for_test/: edge_space_dynamics.yaml
src/edge/: CMakeLists.txt
src/edge/edge_point/: CMakeLists.txt
src/edge_point_check/: edge_point_check_test.cpp
src/edge_point_finder/: CMakeLists.txt  edge_point_finder_test.cpp
src/edge_point_finder/edge_point_check/: CMakeLists.txt
src/edge_point_finder/frame/: CMakeLists.txt
src/edge_point_finder/frame/edge/: CMakeLists.txt
src/edge_space_dynamics/: CMakeLists.txt  add_new_edge_test.cpp  config_for_test.yaml  edge_control_test.cpp  edge_space_dynamics.cpp  edge_space_dynamics.hpp  edge_space_dynamics_test.cpp  get_frame_pose_test.cpp  optimize_test.cpp  vector_average.cpp  vector_average.hpp  vector_average_test.cpp
src/edge_space_dynamics/force_calculation/: edge_node.hpp  force_calculation.hpp  force_calculation_test.cpp  pose_3d.hpp  pose_3d_test.cpp
src/edge_space_dynamics/force_calculation/line_3d/: line_3d.cpp  line_3d.hpp  line_3d_test.cpp
src/edge_space_dynamics/force_calculation/line_3d/vector_average/: CMakeLists.txt  vector_average.cpp  vector_average.hpp  vector_average_test.cpp
src/edges_space/: CMakeLists.txt  edges_space.h  edges_space_test.cpp
src/force_calculation/line_3d/: CMakeLists.txt  line_3d.hpp
src/frame/: CMakeLists.txt
src/frame/edge/: CMakeLists.txt
src/frame/edge/edge_point/: CMakeLists.txt
src/frame_node/: CMakeLists.txt  frame_node.cpp  frame_node.hpp
src/frame_node/edge_distribution/: CMakeLists.txt  edge_distribution.cpp  edge_distribution.hpp  edge_distribution_test.cpp
src/frame_node/edge_point_finder/: CMakeLists.txt  edge_point_finder.cpp
src/frame_node/edge_point_finder/frame/: debug_view.cpp  frame.h  frame_test.cpp
src/frame_node/edge_point_finder/frame/discrete_angle_edge_intensity/: CMakeLists.txt  discrete_angle_edge_intensity.cpp
src/frame_node/edge_point_finder/frame/edge/: edge.cpp  edge_test.cpp
src/frame_node/edge_point_finder/frame/edge/edge_point/: CMakeLists.txt  edge_point.hpp  edge_point_test.cpp
src/frame_node/edge_point_finder/test/data/: img_source.txt
src/line_3d/: CMakeLists.txt
src/local_slam/: CMakeLists.txt  camera_model.cpp  camera_model.hpp  camera_model_test.cpp  local_slam.cpp  local_slam.hpp  local_slam_test.cpp  matching_edge_test.cpp  vslam_debug_view.cpp  vslam_debug_view.hpp
src/local_slam/config_for_test/: edge_space_dynamics.yaml
src/local_slam/edge_space_dynamics/: CMakeLists.txt  add_new_edge_test.cpp  config_for_test.yaml  edge_space_dynamics.cpp  edge_space_dynamics.hpp  get_frame_pose_test.cpp  optimize_test.cpp  vector_average.cpp  vector_average.hpp  vector_average_test.cpp
src/local_slam/edge_space_dynamics/force_calculation/: CMakeLists.txt  edge_node.hpp  force_calculation.cpp  force_calculation_test.cpp  pose_3d.hpp  pose_3d_test.cpp
src/local_slam/edge_space_dynamics/force_calculation/line_3d/: CMakeLists.txt  line_3d.cpp  line_3d.hpp  line_3d_test.cpp
src/local_slam/frame_node/: CMakeLists.txt  frame_node.cpp  frame_node.hpp  frame_node_test.cpp
src/local_slam/frame_node/edge_point_finder/: edge_point_finder_test.cpp
src/local_slam/frame_node/edge_point_finder/frame/: debug_view.cpp  debug_view.hpp
src/local_slam/frame_node/edge_point_finder/frame/discrete_angle_edge_intensity/: discrete_angle_edge_intensity_test.cpp
src/local_slam/frame_node/edge_point_finder/frame/edge/edge_point/: edge_point.cpp  edge_point.hpp
src/local_slam/polygons_space/: CMakeLists.txt  double_squares_space.cpp  double_squares_space.hpp  double_squares_space_test.cpp  polygons_space.cpp  polygons_space.hpp  polygons_space_test.cpp
src/polygons_space/: CMakeLists.txt  double_squares_space.cpp  double_squares_space_test.cpp  polygons_space.cpp  polygons_space.hpp
test/: cpp_copy_test.cpp  discrete_angle_edge_intensity_test.cpp  edge_point_check_test.cpp  edge_point_finder_test.cpp  edge_point_test.cpp  edge_space_dynamics_test.cpp  edge_test.cpp  force_calculation_test.cpp  frame_node_test.cpp  frame_test.cpp  line_3d_test.cpp  pose_3d_test.cpp
test/tools/: polygons_space.cpp  polygons_space.hpp  polygons_space_test.cpp
